--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "predev": "ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.tsx",
     "prebuild": "cross-env NODE_ENV=production ts-node --project ./tsconfig.node.json ./scripts/genAntdCss.tsx"
   },
-
   "devDependencies": {
     "@ant-design/cssinjs": "^1.3.0",
     "@ant-design/static-style-extract": "~1.0.1",
@@ -32,9 +31,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@ant-design/pro-components": "^2.4.9",
     "@ant-design/pro-layout": "^7.10.3",
     "axios": "^1.3.6",
-    "marked": "^4.3.0"
+    "marked": "^4.3.0",
+    "midjourney": "^1.0.10"
   },
   "keywords": [
     "midjourney-api",
