--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@angular/common": "^15.2.8",
     "@ant-design/pro-components": "^2.4.9",
     "@ant-design/pro-layout": "^7.10.3",
     "axios": "^1.3.6",
