--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -38,12 +38,13 @@ jobs:
       with:
         username: ${{ env.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build Docker image
-      uses: docker/build-push-action@v2
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v4.0.0
       with:
         context: .
         file: ./Dockerfile
         push: true
+        cache-from: 'from=type=registry,ref=${{ env.LATEST_TAG }}'
         platforms: linux/amd64,linux/arm64
         tags: ${{ env.TAG }},${{ env.LATEST_TAG }}
     - name: GH Release
