--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,7 +44,8 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
+        # platforms: linux/amd64,linux/arm64
         tags: ${{ env.TAG }},${{ env.LATEST_TAG }}
     - name: GH Release
       uses: softprops/action-gh-release@v0.1.15
