--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -10,9 +10,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - 'main'
+      - "main"
     paths:
-      - '**.ts'
+      - "**.ts"
+      - "**.tsx"
 
 jobs:
   buildAndPush:
@@ -20,35 +21,35 @@ jobs:
     permissions:
       contents: write
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v2.5.2
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-    - name: yarn install&build
-      run: |
-        yarn 
-        yarn build
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ env.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v4.0.0
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        # platforms: linux/amd64
-        platforms: linux/amd64,linux/arm64
-        tags: ${{ env.TAG }},${{ env.LATEST_TAG }}
-    - name: GH Release
-      uses: softprops/action-gh-release@v0.1.15
-      with:
-        tag_name: ${{ env.APPVERSION  }}
-        target_commitish: ${{ github.sha }}
+      - uses: actions/checkout@v3
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.5.2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+      - name: yarn install&build
+        run: |
+          yarn 
+          yarn build
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          # platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
+          tags: ${{ env.TAG }},${{ env.LATEST_TAG }}
+      - name: GH Release
+        uses: softprops/action-gh-release@v0.1.15
+        with:
+          tag_name: ${{ env.APPVERSION  }}
+          target_commitish: ${{ github.sha }}
