--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 #strings
-SALAI_TOKEN= [Token of the Account from which you paid MidJourney]
-SERVER_ID= [Server id here]
-CHANNEL_ID= [Channel in which commands are sent]
+SALAI_TOKEN= "MTAxNzU5NDQ1MDQ3OTk0Nzc5OA.GEuJzw.i5sxQKT5_TMsc_UvlzbzUH36PY2LTbbtsH3no0"
+SERVER_ID= 1017601782693761024
+CHANNEL_ID= 1017605164867260456
