--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 #strings
-SALAI_TOKEN= [Token of the Account from which you paid MidJourney]
-SERVER_ID= [Server id here]
-CHANNEL_ID= [Channel in which commands are sent]
-SESSION_ID= [Session id here]
+SALAI_TOKEN="Token of the Account from which you paid MidJourney"
+SERVER_ID="Server id here"
+CHANNEL_ID="Channel in which commands are sent"
+SESSION_ID="Session id here"
