--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@ant-design/pro-components": "^2.4.9",
     "@ant-design/pro-layout": "^7.10.3",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.6",
     "eventsource-parser": "^1.0.0",
     "midjourney": "^2.2.33",
