--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,5 @@ SALAI_TOKEN="Token of the Account from which you paid MidJourney"
 SERVER_ID="Server id here"
 CHANNEL_ID="Channel in which commands are sent"
 NEXT_PUBLIC_IMAGE_PREFIX="/"
-HUGGINGFACE_TOKEN="huggingface token here https://huggingface.co/docs/hub/security-tokens" 
+HUGGINGFACE_TOKEN="huggingface token here https://huggingface.co/docs/hub/security-tokens"
+OPENAI_API_KEY="openai api key here"
