--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "axios": "^1.3.6",
     "eventsource-parser": "^1.0.0",
     "midjourney": "^2.4.49",
-    "next": "^13.4.4"
+    "next": "^13.4.4",
+    "openai": "^3.2.1"
   },
   "keywords": [
     "midjourney-api",
