--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
   "dependencies": {
     "@ant-design/pro-components": "^2.4.9",
     "@ant-design/pro-layout": "^7.10.3",
+    "@types/netlify-identity-widget": "^1.9.4",
     "@vercel/analytics": "^1.0.1",
     "eventsource-parser": "^1.0.0",
     "midjourney": "^4.3.12",
+    "netlify-identity-widget": "^1.9.2",
     "next": "^13.4.13"
   },
   "keywords": [
